# resume-screener-rag

./: .env.example  .gitignore  pyproject.toml  run.sh
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/services/: db_service.py  embed_service.py  llm_service.py  screening_service.py
backend/app/utils/: text_utils.py
chroma_db/02798069-1e37-40f2-8347-feeab0c86da9/: index_metadata.pickle
chroma_db/e5f3a6e2-f162-4000-ac72-b8fbce513a1e/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: CandidateDetails.tsx  Dashboard.tsx  Screener.tsx
