[project]
name = "day5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.5.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.5.1",
    "pandas>=2.2.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26.4",
]
